--- a/d010/index.html
+++ b/d010/index.html
@@ -15,7 +15,7 @@
         <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</p>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="#">Noticias</a></li>
                 <li><a href="#">Curiosidades</a></li>
                 <li><a href="#">Fale Conosco</a></li>
