--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</p>
         <nav>
             <a href="d010/index.html">Home</a>
-            <a href="#">Noticias</a>
+            <a href="d014/index.html">Noticias</a>
             <a href="#">Curiosidades</a>
             <a href="#">Fale Conosco</a>
         </nav>
