--- a/d014/index.html
+++ b/d014/index.html
@@ -8,7 +8,6 @@
     <title>Projeto Redes Sociais</title>
 	<style>
 		#back {
-			display: inline-block;
 			font-size: 2.5em;
 			text-decoration:none;
 			font-weight: bold;
@@ -37,13 +36,14 @@
                 <p>Seu navegador não é compativel com iframe</p>
             </iframe>
         </section>
+
         <section id="iconeRedes">
-			<a href="../index.html" id="back">←</a> <br />
-            <a href="home.html" target="tela"><img src="assets/imagens/logo-home.jpg" alt="home"></a><br>
-            <a href="youtube.html" target="tela"><img src="assets/imagens/logo-youtube.jpg" alt="youtube"></a><br>
-            <a href="instagram.html" target="tela"><img src="assets/imagens/logo-instagram.jpg" alt="instagram"></a><br>
-            <a href="twitter.html" target="tela"><img src="assets/imagens/logo-twitter.jpg" alt="twitter"></a><br>
-            <a href="facebook.html" target="tela"><img src="assets/imagens/logo-facebook.jpg" alt="facebook"></a><br>
+			<a href="../index.html" id="back">←</a> 
+            <a href="home.html" target="tela"><img src="assets/imagens/logo-home.jpg" alt="home"></a>
+            <a href="youtube.html" target="tela"><img src="assets/imagens/logo-youtube.jpg" alt="youtube"></a>
+            <a href="instagram.html" target="tela"><img src="assets/imagens/logo-instagram.jpg" alt="instagram"></a>
+            <a href="twitter.html" target="tela"><img src="assets/imagens/logo-twitter.jpg" alt="twitter"></a>
+            <a href="facebook.html" target="tela"><img src="assets/imagens/logo-facebook.jpg" alt="facebook"></a>
             <a href="github.html" target="tela"><img src="assets/imagens/logo-github.jpg" alt="github"></a>
         </section>
     </main>
