--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <a href="d010/index.html">Home</a>
             <a href="d014/index.html">Noticias</a>
-            <a href="#">Curiosidades</a>
+            <a href="dLogin/index.html">Curiosidades</a>
             <a href="#">Fale Conosco</a>
         </nav>
 
